# github-macros

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
doc/: permit.rst  protect.rst  refresh.rst  releases.rst
github_macros/: __init__.py  common.py  http.py
github_macros/cli/: _base.py  branch_protection.py  refresh.py  releases.py  repo_permissions.py
github_macros/models/: github.py
test/cli/: test_helpdocs.py
